resolved my accounts results tab icons issues and working on power center mobile card

--- a/src/components/OutlineButton/outlineButton.module.scss
+++ b/src/components/OutlineButton/outlineButton.module.scss
@@ -22,3 +22,27 @@
         margin-right: 10px;
     }
 }
+
+@media (max-width: 414px) {
+    .__outline_button {
+        width: 166px;
+        height: 38px;
+        border-radius: 6px;
+        border: solid 1px $primary;
+        background-color: $black3;
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $primary;
+        outline: none;
+        cursor: pointer;
+    
+        .__outline_button_icon {
+            margin-right: 10px;
+        }
+    }
+}
