--- a/src/components/PowerCenterMobileCard/teamRoster.module.scss
+++ b/src/components/PowerCenterMobileCard/teamRoster.module.scss
@@ -1,8 +1,7 @@
 @import '../../scss/colors.scss';
 
-.__prize_grid {
-
-    .__prize_grid_date_time {
+.__team_roster {
+    .__team_roster_date_time {
         width: 100%;
         height: 17px;
         margin-top: 10px;
@@ -19,11 +18,11 @@
         padding-left: 10px;
     }
 
-    .__prize_grid_powerdfs {
+    .__team_roster_powerdfs {
         display: flex;
         flex-direction: row;
 
-        .__prize_grid_powerdfs_title {
+        .__team_roster_powerdfs_title {
             width: 150px;
             height: 28px;
             font-family: Poppins;
@@ -35,11 +34,11 @@
             letter-spacing: normal;
             color: $primary;
 
-            .__prize_grid_powerdfs_title_first {
+            .__team_roster_powerdfs_title_first {
                 color: $grey2;
             }
 
-            .__prize_grid_title {
+            .__team_roster_title {
                 width: 65px;
                 height: 16px;
                 font-family: Poppins;
@@ -56,28 +55,63 @@
         }
     }
 
-    .__prize_grid_data_container {
+    .__team_roster_data_container {
         display: flex;
         flex-direction: row;
-        margin-top: 15px;
-
-        .__prize_grid_data_content {
+        margin-top: 10px;
+        
+        .__team_roster_data_content {
             flex: 1;
-            .__prize_grid_data {
+
+            .__team_roster_data {
                 display: flex;
                 flex-direction: row;
-                padding-bottom: 5px;
-                
-                .__prize_grid_data_title_div {
-                    display: flex;
-                    flex: 1;
+                margin-bottom: 10px;
         
-                    .__prize_grid_data_title {
+                .__team_roster_data_title_div {
+                    display: flex;
+                    margin-left: 8px;
+                    position: relative;
+        
+                    .__team_roster_data_title {
                         width: 100%;
                         height: 18px;
-                        margin-bottom: 5px;
                         font-family: Poppins;
                         font-size: 14px;
+                        font-stretch: normal;
+                        line-height: 1.29;
+                        letter-spacing: normal;
+                        font-weight: 900;
+                        font-style: italic;
+                        color: $lightBlue;
+                    }
+
+                    .__team_roster_data_count_div {
+                        margin-left: 5px;
+                        
+                        .__team_roster_data_count {
+                            right: 0;
+                            margin-bottom: 13px;
+                            font-family: Poppins;
+                            font-size: 12px;
+                            font-weight: normal;
+                            font-stretch: normal;
+                            font-style: normal;
+                            letter-spacing: normal;
+                            color: $grey2;
+                        }
+                    }
+                }
+        
+                .__team_roster_data_value_div {
+                    display: flex;
+                    margin-left: 8px;
+                    
+                    .__team_roster_data_value {
+                        width: 100%;
+                        height: 18px;
+                        font-family: Poppins;
+                        font-size: 12px;
                         font-weight: normal;
                         font-stretch: normal;
                         font-style: normal;
@@ -86,25 +120,20 @@
                         color: $grey2;
                     }
                 }
+            }
         
-                .__prize_grid_data_value_div {
-                    display: flex;
-                    flex: 1;
-        
-                    .__prize_grid_data_value {
-                        width: 100%;
-                        height: 18px;
-                        margin-bottom: 5px;
-                        font-family: Poppins;
-                        font-size: 14px;
-                        font-weight: 600;
-                        font-stretch: normal;
-                        font-style: normal;
-                        line-height: 1.29;
-                        letter-spacing: normal;
-                        color: $lightBlue;
-                    }
-                }
+            .__team_roster_heading {
+                width: 100%;
+                height: 23px;
+                margin: 0 134px 12px 0;
+                font-family: Poppins;
+                font-size: 16px;
+                font-weight: 600;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: normal;
+                letter-spacing: normal;
+                color: $lightBlue;
             }
         }
     }
