--- a/src/pages/PowerCenter/PowerCenter.scss
+++ b/src/pages/PowerCenter/PowerCenter.scss
@@ -4,7 +4,7 @@
     .__power_center_banner {
         background-image: url('../../assets/power-center-banner.png');
         background-size: 100% auto;
-        background-position: center;
+        background-repeat: no-repeat;
 
         .__power_center_banner_left {
             display: flex;
@@ -52,6 +52,136 @@
             position: relative;
             margin-top: 60px;
 
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .__power_center {
+        .__power_center_banner {
+            background-image: url('../../assets/power-center-banner-mobile.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 553px;
+
+            .__power_center_banner_left {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                height: 350px;
+                align-items: center;
+                .__power_center_banner_left_icon {
+                    display: inherit;
+                    align-items: flex-end;
+
+                    .__banner_title_icon {
+                        width: 35px;
+                        height: 60px;
+                    }
+                }
+    
+                .__power_center_banner_left_title {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;
+    
+                    .__power_center_banner_left_title_main {
+                        width: 396px;
+                        height: 56px;
+                        font-family: Teko;
+                        font-size: 56px;
+                        font-weight: bold;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: normal;
+                        letter-spacing: normal;
+                        text-align: center;
+                        color: $grey2;
+                    }
+    
+                    .__power_center_banner_left_title_sub {
+                        height: 17px;
+                        font-family: Poppins;
+                        font-size: 12px;
+                        font-weight: 500;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: normal;
+                        letter-spacing: 0.4px;
+                        color: $grey2;
+                    }
+                }
+            }
+
+            .__balance {
+                margin-top: 153px;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .__power_center {
+        .__power_center_banner {
+            background-image: url('../../assets/power-center-banner-mobile.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 553px;
+
+            .__power_center_banner_left {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                height: 350px;
+                align-items: center;
+                .__power_center_banner_left_icon {
+                    display: inherit;
+                    align-items: flex-end;
+
+                    .__banner_title_icon {
+                        width: 35px;
+                        height: 60px;
+                    }
+                }
+    
+                .__power_center_banner_left_title {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;
+    
+                    .__power_center_banner_left_title_main {
+                        width: 395px;
+                        height: 56px;
+                        font-family: Teko;
+                        font-size: 56px;
+                        font-weight: bold;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: normal;
+                        letter-spacing: normal;
+                        text-align: center;
+                        color: $grey2;
+                    }
+    
+                    .__power_center_banner_left_title_sub {
+                        height: 17px;
+                        font-family: Poppins;
+                        font-size: 12px;
+                        font-weight: 500;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: normal;
+                        letter-spacing: 0.4px;
+                        color: $grey2;
+                    }
+                }
+            }
+
+            .__balance {
+                margin-top: 153px;
+            }
         }
     }
 }
