--- a/src/components/SearchInput/index.module.scss
+++ b/src/components/SearchInput/index.module.scss
@@ -37,7 +37,7 @@
     border-radius: 12px;
     font-size: 14px;
     position: relative;
-    width: 150px;
+    min-width: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
