resolved balance api issue on balance tab, showed btc and eth on balance, power center mobile ui fixes and power center tablet ui completed

--- a/src/components/PowerCenterMobileCard/index.module.scss
+++ b/src/components/PowerCenterMobileCard/index.module.scss
@@ -30,6 +30,7 @@
                 line-height: normal;
                 letter-spacing: normal;
                 color: $grey11;
+                text-align: left;
             }
 
             .__power_center_card_powerdfs {
