--- a/src/components/PowerCenterMobileCard/prizeGrid.module.scss
+++ b/src/components/PowerCenterMobileCard/prizeGrid.module.scss
@@ -22,6 +22,7 @@
     .__prize_grid_powerdfs {
         display: flex;
         flex-direction: row;
+        margin-left: -17px;
 
         .__prize_grid_powerdfs_title {
             width: 150px;
@@ -60,6 +61,7 @@
         display: flex;
         flex-direction: row;
         margin-top: 15px;
+        margin-left: -17px;
 
         .__prize_grid_data_content {
             flex: 1;
