--- a/src/components/PowerCenterMobileCard/teamRoster.module.scss
+++ b/src/components/PowerCenterMobileCard/teamRoster.module.scss
@@ -55,14 +55,28 @@
         }
     }
 
+    .__team_roster_heading {
+        width: 100%;
+        height: 23px;
+        margin-left: 10px;
+        font-family: Poppins;
+        font-size: 14px;
+        font-weight: 600;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $lightBlue;
+        text-align: left;
+    }
+
     .__team_roster_data_container {
         display: flex;
         flex-direction: row;
+        margin-left: 10px;
         margin-top: 10px;
         
         .__team_roster_data_content {
-            flex: 1;
-
             .__team_roster_data {
                 display: flex;
                 flex-direction: row;
@@ -70,14 +84,12 @@
         
                 .__team_roster_data_title_div {
                     display: flex;
-                    margin-left: 8px;
                     position: relative;
         
                     .__team_roster_data_title {
-                        width: 100%;
                         height: 18px;
                         font-family: Poppins;
-                        font-size: 14px;
+                        font-size: 16px;
                         font-stretch: normal;
                         line-height: 1.29;
                         letter-spacing: normal;
@@ -104,11 +116,10 @@
                 }
         
                 .__team_roster_data_value_div {
-                    display: flex;
                     margin-left: 8px;
-                    
+                    margin-right: 40px;
+
                     .__team_roster_data_value {
-                        width: 100%;
                         height: 18px;
                         font-family: Poppins;
                         font-size: 12px;
@@ -120,20 +131,6 @@
                         color: $grey2;
                     }
                 }
-            }
-        
-            .__team_roster_heading {
-                width: 100%;
-                height: 23px;
-                margin: 0 134px 12px 0;
-                font-family: Poppins;
-                font-size: 16px;
-                font-weight: 600;
-                font-stretch: normal;
-                font-style: normal;
-                line-height: normal;
-                letter-spacing: normal;
-                color: $lightBlue;
             }
         }
     }
