--- a/src/pages/PowerCenter/PowerCenter.scss
+++ b/src/pages/PowerCenter/PowerCenter.scss
@@ -71,13 +71,15 @@
                 justify-content: center;
                 height: 350px;
                 align-items: center;
+
                 .__power_center_banner_left_icon {
                     display: inherit;
                     align-items: flex-end;
+                    margin-right: 10px;
 
                     .__banner_title_icon {
-                        width: 35px;
-                        height: 60px;
+                        width: 45px;
+                        height: 70px;
                     }
                 }
     
@@ -88,28 +90,30 @@
     
                     .__power_center_banner_left_title_main {
                         width: 396px;
-                        height: 56px;
+                        height: 70px;
                         font-family: Teko;
-                        font-size: 56px;
+                        font-size: 70px;
                         font-weight: bold;
                         font-stretch: normal;
                         font-style: normal;
                         line-height: normal;
                         letter-spacing: normal;
-                        text-align: center;
+                        text-align: left;
                         color: $grey2;
                     }
     
                     .__power_center_banner_left_title_sub {
+                        width: 396px;
                         height: 17px;
                         font-family: Poppins;
-                        font-size: 12px;
+                        font-size: 15px;
                         font-weight: 500;
                         font-stretch: normal;
                         font-style: normal;
                         line-height: normal;
                         letter-spacing: 0.4px;
                         color: $grey2;
+                        padding-top: 5px;
                     }
                 }
             }
@@ -134,15 +138,18 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                flex: 1;
                 height: 350px;
                 align-items: center;
+
                 .__power_center_banner_left_icon {
                     display: inherit;
                     align-items: flex-end;
+                    margin-right: 10px;
 
                     .__banner_title_icon {
-                        width: 35px;
-                        height: 60px;
+                        width: 45px;
+                        height: 70px;
                     }
                 }
     
@@ -153,28 +160,30 @@
     
                     .__power_center_banner_left_title_main {
                         width: 395px;
-                        height: 56px;
+                        height: 70px;
                         font-family: Teko;
-                        font-size: 56px;
+                        font-size: 70px;
                         font-weight: bold;
                         font-stretch: normal;
                         font-style: normal;
                         line-height: normal;
                         letter-spacing: normal;
-                        text-align: center;
+                        text-align: left;
                         color: $grey2;
                     }
     
                     .__power_center_banner_left_title_sub {
+                        width: 395px;
                         height: 17px;
                         font-family: Poppins;
-                        font-size: 12px;
+                        font-size: 15px;
                         font-weight: 500;
                         font-stretch: normal;
                         font-style: normal;
                         line-height: normal;
                         letter-spacing: 0.4px;
                         color: $grey2;
+                        padding-top: 5px;
                     }
                 }
             }
@@ -199,11 +208,14 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                flex: 1;
                 height: 350px;
                 align-items: center;
+                
                 .__power_center_banner_left_icon {
                     display: inherit;
                     align-items: flex-end;
+                    margin-right: 10px;
 
                     .__banner_title_icon {
                         width: 35px;
@@ -231,6 +243,7 @@
                     }
     
                     .__power_center_banner_left_title_sub {
+                        width: 294px;
                         height: 17px;
                         font-family: Poppins;
                         font-size: 12px;
@@ -240,6 +253,7 @@
                         line-height: normal;
                         letter-spacing: 0.4px;
                         color: $grey2;
+                        padding-top: 5px;
                     }
                 }
             }
