drop down menu brought forward

--- a/src/components/CustomDropDown/customDropDown.module.scss
+++ b/src/components/CustomDropDown/customDropDown.module.scss
@@ -37,6 +37,7 @@
         top: 35px;
         width: 100%;
         border-radius: 8px;
+        z-index: 1;
 
         .__custom_drop_down_wrapper_list_item {
             width: 100%;
