--- a/src/components/Header4/index.module.scss
+++ b/src/components/Header4/index.module.scss
@@ -1109,3 +1109,61 @@
     }
   }
 }
+
+@media (max-width: 414px) {
+  .header_container {
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    justify-content: space-between;
+    position: relative;
+  
+    .header_top {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 200px;
+  
+      .header_title {
+        width: 256px;
+        height: 52px;
+        margin: 0 0 6px;
+        font-family: Teko;
+        font-size: 52px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: center;
+        color: $grey2;
+      }
+
+      .horizontal_line {
+        width: 20px;
+        height: 1px;
+        margin: 0 0px 3px 0;
+        border: solid 2px $primary;
+        display: inline-block;
+      }
+
+      .header_sub_title {
+        width: 158px;
+        height: 23px;
+        margin: 0 8px 0 9px;
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: center;
+        color: $grey;
+      }
+    }
+  }
+}
