--- a/src/components/PowerpickCard/index.module.scss
+++ b/src/components/PowerpickCard/index.module.scss
@@ -32,3 +32,20 @@
     box-shadow: inset 0 1px 0 0 rgba(242, 242, 242, 0.6);
   }
 }
+
+@media (max-width: 414px) {
+  .card_wrapper {
+    padding: 22px;
+    border: none;
+    border-radius: 14px;
+    background-color: $lightBlack;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .card_shadow {
+    box-shadow: none;
+  }
+}
