--- a/src/components/SearchInput/index.module.scss
+++ b/src/components/SearchInput/index.module.scss
@@ -512,3 +512,107 @@
     }
   }
 }
+
+@media (max-width: 414px) {
+  .search_form {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+
+    span {
+      background-color: $lightBlack5;
+      padding: 2px 10px;
+      border-radius: 12px;
+      margin: 0 10px 0 0;
+      width: 100%;
+      display: flex;
+      align-items: center;
+  
+      svg {
+        margin: 0 10px;
+      }
+  
+      input {
+        border: none;
+        outline: none;
+        background-color: transparent;
+        height: 46px;
+        width: 165px;
+        color: $white;
+        font-size: 14px;
+      }
+    }
+  
+    .search_dropdown {
+      background-color: $lightBlack5;
+      padding: 13px 20px;
+      border-radius: 12px;
+      font-size: 14px;
+      position: relative;
+      min-width: 133px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  
+      &:hover {
+        cursor: pointer;
+      }
+  
+      .arrow {
+        position: absolute;
+        border: solid $white;
+        border-radius: 0;
+        border-width: 0 2px 2px 0;
+        padding: 3px;
+        display: inline-block;
+        width: 8px;
+      }
+  
+      .down {
+        transform: rotate(45deg) translate(36px, -37px);
+      }
+  
+      .up {
+        transform: rotate(-135deg) translate(-36px, 37px);
+      }
+  
+      .search_dropdown_menu {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        background-color: $lightBlack5;
+        width: 100%;
+        border-radius: 0 0 12px 12px;
+        top: 53px;
+        right: 0;
+        font-size: 14px;
+        z-index: 5;
+        text-align: center;
+  
+        span {
+          width: 100%;
+          padding: 13px 30px;
+          border-radius: 0;
+  
+          &:last-child {
+            border-radius: 0 0 12px 12px;
+          }
+  
+          &:hover {
+            cursor: pointer;
+            background-color: $darkblack;
+            transition: background-color 1s;
+          }
+  
+          &.active {
+            cursor: default;
+            background-color: $darkblack;
+          }
+        }
+      }
+    }
+  }
+}
