--- a/src/components/SportsSelectionCard3/index.module.scss
+++ b/src/components/SportsSelectionCard3/index.module.scss
@@ -1616,3 +1616,368 @@
     }
   }
 }
+
+@media (max-width: 414px) {
+  .container_body_card {
+    background-color: $lightBlack11;
+    border-radius: 5px;
+    padding: 14px 16px;
+    box-shadow: 0 8px 25px 0 $lightBlack7;
+    width: 463px;
+    height: 182px;
+    margin: 10px 0px;
+    position: relative;
+    overflow: hidden;
+    width: 347px;
+    height: 184px;
+    margin: 20px 14px;
+    padding: 16px 16px 12px;
+    border: solid 1px #111111;
+  
+    &.display_none {
+      display: none;
+    }
+  
+    .container_body_card_header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  
+      .container_selected_p {
+        font-size: var(--font-size-20);
+        padding: 0;
+        margin: 0 0 0 -10px;
+        color: $lightBlue;
+        font-family: Poppins;
+        font-weight: 600;
+  
+        span {
+          font-size: var(--font-size-20);
+          font-weight: 900;
+          font-style: italic;
+          text-transform: uppercase;
+          margin: 0 8px 0 0;
+        }
+  
+        &.active {
+          color: $primary;
+          border-bottom-color: $primary;
+        }
+      }
+  
+      .injured {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        transform: translate(-12px, 0);
+  
+        span {
+          color: $danger2;
+          margin: 0 5px;
+          font-size: var(--font-size-14);
+          font-weight: 500;
+        }
+      }
+  
+      button {
+        background-color: $lightBlack6;
+        border: none;
+        outline: none;
+        color: $grey3;
+        font-size: var(--font-size-12);
+        font-weight: 600;
+        width: 84px;
+        height: 28px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+  
+        &:hover {
+          cursor: pointer;
+        }
+  
+        &.disabled {
+          background-color: $lightGrey4;
+          cursor: not-allowed;
+          opacity: 0.2;
+        }
+      }
+  
+      .container_selected {
+        padding: 0;
+        margin: 0;
+  
+        .container_selected_p_1 {
+          display: flex;
+          flex-direction: row;
+          margin: 0;
+          padding: 0;
+          justify-content: center;
+          align-items: center;
+  
+          img {
+            width: 24px;
+            height: 24px;
+            margin-left: 5px;
+  
+            &:hover {
+              cursor: pointer;
+            }
+          }
+  
+          svg {
+            margin-right: 5px;
+          }
+        }
+      }
+    }
+  
+    .rushing_and_receiving {
+      display: flex;
+      flex-direction: row;
+      height: 6px;
+      margin-bottom: 2px;
+  
+      div {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 12px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 2px;
+        text-align: center;
+        color: #688fbd;
+      }
+    }
+  
+    p {
+      font-size: var(--font-size-14);
+      margin-top: 15px;
+  
+      span {
+        font-weight: 600;
+        font-size: var(--font-size-20);
+      }
+  
+      .teamA {
+        font-size: var(--font-size-14);
+      }
+  
+      .teamB {
+        color: $grey2;
+        font-size: var(--font-size-14);
+        font-weight: normal;
+        opacity: 0.8;
+      }
+    }
+  
+    .stats_detail_container {
+      display: flex;
+      width: 100%;
+      margin-top: 14px;
+  
+      .stats_detail_left {
+        display: flex;
+        flex-direction: column;
+        margin-right: 10px;
+        margin-top: 28px;
+        font-family: Poppins;
+        font-size: 14px;
+        color: $grey2;
+  
+        span {
+          margin: 3px 0;
+        }
+      }
+  
+      .stats_detail_right {
+        display: flex;
+        flex-direction: column;
+        width: 67%;
+  
+        .stats_detail_right_h {
+          display: flex;
+          flex-direction: row;
+          width: 100%;
+          margin-bottom: 6px;
+          color: $grey2;
+          font-weight: normal;
+          font-family: Poppins;
+          font-size: 14px;
+  
+          span {
+            flex: 1;
+            text-align: center;
+          }
+        }
+  
+        .stats_detail_right_b {
+          display: flex;
+          flex-direction: column;
+          opacity: 0.6;
+          font-family: Poppins;
+          font-size: 14px;
+  
+          .stats_detail_right_b_item {
+            display: flex;
+            width: 100%;
+            margin: 3px 0;
+  
+            span {
+              flex: 1;
+              text-align: center;
+            }
+          }
+        }
+      }
+    }
+  
+    .card_state_main_container {
+      display: flex;
+      flex-direction: row;
+      font-family: Poppins;
+  
+      &.space_evenly {
+        // justify-content: space-evenly;
+        align-items: center;
+      }
+  
+      .card_state_left {
+        display: flex;
+        flex-direction: column;
+        padding-top: 30px;
+        font-size: var(--font-size-14);
+  
+        strong {
+          display: flex;
+          flex: 1;
+          font-weight: normal;
+          text-transform: capitalize;
+          margin: 5.5px 0;
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: $grey2;
+        }
+      }
+  
+      img {
+        width: 93%;
+        height: 76px;
+        margin: 25px auto;
+      }
+  
+      .container_body_card_state {
+        margin: 8px 0 0 0;
+  
+        &.border {
+          border-left: 3px solid $lightBlue;
+        }
+  
+        &.active {
+          border-color: $primary;
+        }
+  
+        &.card_state_no_data {
+          padding-left: 10px;
+        }
+      }
+    }
+  
+    .container_card_footer_main {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-end;
+      justify-content: flex-end;
+  
+      .card_footer_left {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+  
+        .container_body_footer {
+          width: 100%;
+          align-self: center;
+          display: flex;
+          justify-content: space-evenly;
+          align-items: center;
+          padding: 0;
+          margin: 0;
+  
+          span {
+            display: flex;
+            font-size: var(--font-size-14);
+            font-weight: normal;
+            color: $grey2;
+            opacity: 0.6;
+  
+            svg {
+              margin-right: 5px;
+            }
+          }
+        }
+      }
+  
+      .card_footer_right {
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: flex-end;
+        bottom: 15px;
+        right: 12px;
+        opacity: 1;
+        position: absolute;
+      }
+    }
+    .divider {
+      border: 0.4px solid $divider;
+      opacity: 0.1;
+      padding: 0;
+      margin: 10px auto;
+      width: 95%;
+    }
+  
+    .container_body_card_start_power {
+      border-radius: 2px;
+      background-image: linear-gradient(110deg, $primary 60%, $yellow);
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: 130px;
+      height: 16px;
+      line-height: 16px;
+      position: absolute;
+      transform: translate(-17px, -14px);
+      box-shadow: 0 0px 8px 4px $black;
+  
+      p {
+        font-size: var(--font-size-13);
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: 550;
+        color: $darkblack;
+        font-family: Teko;
+        margin: 3px 0 0 0;
+        padding: 0;
+      }
+  
+      svg {
+        padding: 0;
+        margin: 0;
+        margin-right: 2px;
+      }
+    }
+  }
+}
